SERVER-110803 Take into account sort direction in group stage when performing distinct scan optimization (#43287)

GitOrigin-RevId: 3eabc85fb003959aa1da9aa188c3e0da757a2920